--- a/event-rsvp/tsconfig.json
+++ b/event-rsvp/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/server.ts", "src/lsrc/lib/middleware.tsrc/lib/client.ts"],
   "exclude": ["node_modules"]
 }
