--- a/event-rsvp/package.json
+++ b/event-rsvp/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.8",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
@@ -37,11 +38,12 @@
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-hook-form": "^7.57.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "zod": "^3.25.46"
   },
   "peerDependencies": {
