--- a/event-rsvp/package.json
+++ b/event-rsvp/package.json
@@ -27,18 +27,19 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
-    "@tabler/icons-react": "^3.31.0",
+    "@tabler/icons-react": "^3.34.1",
     "antd": "^5.25.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
-    "lucide-react": "^0.501.0",
-    "motion": "^12.7.4",
-    "next": "15.3.1",
+    "framer-motion": "^12.23.9",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.9",
+    "next": "^15.3.5",
     "next-themes": "^0.4.6",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-day-picker": "^9.7.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-hook-form": "^7.57.0",
     "sonner": "^2.0.3",
@@ -60,8 +61,8 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.2",
     "typescript": "^5"
   }
