--- a/event-rsvp/package.json
+++ b/event-rsvp/package.json
@@ -28,6 +28,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.8",
     "@tabler/icons-react": "^3.34.1",
+    "@vercel/analytics": "^1.5.0",
     "antd": "^5.25.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
